--- a/excellence-fee/inc/style.css
+++ b/excellence-fee/inc/style.css
@@ -6,3 +6,9 @@
 	width: 100%;
     margin-bottom: 20px;
 }
+.input_fee, .input_check {
+    width: 100%;
+}
+.input_check, .submit_fee_div{
+	margin-top: 10px;
+}
